Remove partial implementation of -moz-key-equivalent that was useful for nothing other than crashing.  b=265721  r+sr=bzbarsky  a=asa