content/html/style/src/nsCSSStruct.cpp
@@ -1013,7 +1013,7 @@ void nsCSSContent::List(FILE* out, PRInt32 aIndent) const
 // --- nsCSSUserInterface -----------------
 
 nsCSSUserInterface::nsCSSUserInterface(void)
-  : mKeyEquivalent(nsnull), mCursor(nsnull)
+  : mCursor(nsnull)
 {
   MOZ_COUNT_CTOR(nsCSSUserInterface);
 }
@@ -1022,20 +1022,17 @@ nsCSSUserInterface::nsCSSUserInterface(const nsCSSUserInterface& aCopy)
   : mUserInput(aCopy.mUserInput),
     mUserModify(aCopy.mUserModify),
     mUserSelect(aCopy.mUserSelect),
-    mKeyEquivalent(nsnull),
     mUserFocus(aCopy.mUserFocus),
     mCursor(nsnull),
     mForceBrokenImageIcon(aCopy.mForceBrokenImageIcon)
 {
   MOZ_COUNT_CTOR(nsCSSUserInterface);
   CSS_IF_COPY(mCursor, nsCSSValueList);
-  CSS_IF_COPY(mKeyEquivalent, nsCSSValueList);
 }
 
 nsCSSUserInterface::~nsCSSUserInterface(void)
 {
   MOZ_COUNT_DTOR(nsCSSUserInterface);
-  CSS_IF_DELETE(mKeyEquivalent);
   CSS_IF_DELETE(mCursor);
 }
 
@@ -1049,11 +1046,6 @@ void nsCSSUserInterface::List(FILE* out, PRInt32 aIndent) const
   mUserInput.AppendToString(buffer, eCSSProperty_user_input);
   mUserModify.AppendToString(buffer, eCSSProperty_user_modify);
   mUserSelect.AppendToString(buffer, eCSSProperty_user_select);
-  nsCSSValueList*  keyEquiv = mKeyEquivalent;
-  while (nsnull != keyEquiv) {
-    keyEquiv->mValue.AppendToString(buffer, eCSSProperty_key_equivalent);
-    keyEquiv= keyEquiv->mNext;
-  }
   mUserFocus.AppendToString(buffer, eCSSProperty_user_focus);
   
   nsCSSValueList*  cursor = mCursor;
