content/shared/public/nsStyleStruct.h
@@ -1108,7 +1108,6 @@ struct nsStyleUIReset: public nsStyleStruct {
   static nsChangeHint MaxDifference();
 #endif
 
-  PRUnichar mKeyEquivalent;   // [reset] XXX what type should this be?
   PRUint8   mUserSelect;      // [reset] (selection-style)
   PRUint8   mForceBrokenImageIcon; // [reset]  (0 if not forcing, otherwise forcing)
 };
