layout/style/nsStyleContext.cpp
@@ -829,9 +829,8 @@ void nsStyleContext::DumpRegressionData(nsPresContext* aPresContext, FILE* out, 
   // UIReset
   IndentBy(out,aIndent);
   const nsStyleUIReset* uiReset = GetStyleUIReset();
-  fprintf(out, "<uireset data=\"%d %d\" />\n",
-    (int)uiReset->mUserSelect,
-    (int)uiReset->mKeyEquivalent);
+  fprintf(out, "<uireset data=\"%d\" />\n",
+    (int)uiReset->mUserSelect);
 
   // Column
   IndentBy(out,aIndent);
